changing .gitignore for xcode4

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.pyc
 *~.nib/
 */build/*
+*xcuserdata
 
 # Textmate - if you build your xcode projects with it
 *.tm_build_errors
@@ -16,3 +17,5 @@
 # osx noise
 .DS_Store
 profile
+
+ClassMate/ClassMate.xcodeproj/xcuserdata/*
