--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,5 @@
 .DS_Store
 profile
 
-ClassMate/ClassMate.xcodeproj/xcuserdata/.*
+
+ClassMate/ClassMate.xcodeproj/xcuserdata/Ziggles.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
